[package]
name = "black_jack_client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.9.2"
solana-client = "1.9.2"
yaml-rust = "0.4.5"
rand = "0.8.4"
utils = { path= "../utils"}
borsh = "0.9.1"
solana-account-decoder="1.9.2"