[package]
name = "program"
version = "0.0.1"
edition = "2021"

[features]
# https://docs.solana.com/developing/on-chain-programs/developing-rust#project-layout
#
# When toggled on this feature will cause the crate to not compile a
# bpf entrypoint.
#
# See the corresponding `#[cfg(not(feature = "exclude_entrypoint"))]`
# in lib.rs. This is needed so that other Solana programs can import
# helper functions from this library without causing symbol conflicts
# with our entrypoint.
exclude_entrypoint = []

[dependencies]
solana-program = "1.9.2"
borsh = "0.9.1"
instructions = {path = "../instructions"}

[lib]
name = "black_jack"
crate-type = ["cdylib", "lib"]
